--- a/www.nass.gov.ng/4cf84f4153fb5b9750864898396bf71088e3e20a.yml
+++ b/www.nass.gov.ng/4cf84f4153fb5b9750864898396bf71088e3e20a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:02:19 GMT
+    - Tue, 27 Mar 2018 19:24:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dLSpeRgrEMGK9M%2CeI8hZ92; path=/
+    - PHPSESSID=GhmU7BShgA1KUjIdLG%2Cmm1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:02:19 GMT
+recorded_at: Tue, 27 Mar 2018 19:24:07 GMT
