--- a/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
+++ b/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:03:06 GMT
+    - Tue, 27 Mar 2018 19:25:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ns2%2CTGjiQF0wlwHwyzVT21; path=/
+    - PHPSESSID=JLLn%2CzHAHyfxB4pAOmYhr1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:03:06 GMT
+recorded_at: Tue, 27 Mar 2018 19:25:07 GMT
