--- a/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
+++ b/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:05:42 GMT
+    - Tue, 27 Mar 2018 19:27:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=53Mu%2Cw9V%2CTS-l8l1y78fe1; path=/
+    - PHPSESSID=EbENtL%2Ce6oKDf48Nzer5L2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:05:42 GMT
+recorded_at: Tue, 27 Mar 2018 19:27:59 GMT
