--- a/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
+++ b/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:10:37 GMT
+    - Tue, 27 Mar 2018 19:32:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CfMHTWqIzTM5%2C1NNXkI4r3; path=/
+    - PHPSESSID=l6vEo7WxVROm4q6DZwMa82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:10:37 GMT
+recorded_at: Tue, 27 Mar 2018 19:32:30 GMT
