--- a/www.nass.gov.ng/9a6d0cd67d8247ddcfc15c84bd721b88ecbe39f2.yml
+++ b/www.nass.gov.ng/9a6d0cd67d8247ddcfc15c84bd721b88ecbe39f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:26:14 GMT
+    - Tue, 27 Mar 2018 19:51:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6%2CVWw5Bpa7WDDRVACujpm2; path=/
+    - PHPSESSID=KE7xWMoVCi2dMdRHL%2CYsy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:26:14 GMT
+recorded_at: Tue, 27 Mar 2018 19:51:06 GMT
