--- a/www.nass.gov.ng/8f274d40352fcc1cbe9b3c678fd6d79843c5c5d4.yml
+++ b/www.nass.gov.ng/8f274d40352fcc1cbe9b3c678fd6d79843c5c5d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:29:26 GMT
+    - Tue, 27 Mar 2018 19:56:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N%2CBj-1niJmcmQRGaown942; path=/
+    - PHPSESSID=drAFR0-lM3iNRUXo54ESS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:29:26 GMT
+recorded_at: Tue, 27 Mar 2018 19:56:10 GMT
