--- a/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
+++ b/www.nass.gov.ng/41bb896de8adb4458a2779c82cb42fff5823497e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:33:48 GMT
+    - Tue, 27 Mar 2018 20:01:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C11EEq7bPduU578Wmny-y3; path=/
+    - PHPSESSID=Cqu4K3BTvcd2Fg46WYgLn3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:33:48 GMT
+recorded_at: Tue, 27 Mar 2018 20:01:18 GMT
