--- a/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
+++ b/www.nass.gov.ng/097917a439e90b8c2a4e796e20254a51fd185aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:34:27 GMT
+    - Tue, 27 Mar 2018 20:02:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=52uog8iN0xZ3l3Jhf%2CU1U3; path=/
+    - PHPSESSID=mz0zIXSaYdOWXNNHJcg3f1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:34:28 GMT
+recorded_at: Tue, 27 Mar 2018 20:02:17 GMT
