--- a/www.nass.gov.ng/e02219626eb60d496503ef494d2dee3dbd60dba0.yml
+++ b/www.nass.gov.ng/e02219626eb60d496503ef494d2dee3dbd60dba0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:43:45 GMT
+    - Tue, 27 Mar 2018 20:12:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c%2CVOwM7Vwr5x9zDaETxZ02; path=/
+    - PHPSESSID=7xv5vi4Jflu16%2CEW09ncl3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:43:45 GMT
+recorded_at: Tue, 27 Mar 2018 20:12:12 GMT
