--- a/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
+++ b/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:48:42 GMT
+    - Tue, 27 Mar 2018 20:19:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0ysIEW3nx%2CvCbBaLp2Yae2; path=/
+    - PHPSESSID=pASL-f6mSwDi09BZNPCIC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:48:42 GMT
+recorded_at: Tue, 27 Mar 2018 20:19:12 GMT
