--- a/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
+++ b/www.nass.gov.ng/a7a1c1264937b3cd018926568f9b077bebb30ca2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:50:29 GMT
+    - Tue, 27 Mar 2018 20:22:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3CoQ0QdxL-l3DHKEao6K43; path=/
+    - PHPSESSID=07FGj%2CNTtE-d-HrhG8WIY2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:50:29 GMT
+recorded_at: Tue, 27 Mar 2018 20:22:15 GMT
