--- a/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
+++ b/www.nass.gov.ng/b98be1d86f7c968268625792f9496a7c92d209ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 15:53:35 GMT
+    - Tue, 27 Mar 2018 20:26:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RXOp0easQ-VBoZcGRQsqf3; path=/
+    - PHPSESSID=Yv9kthr8DT7txMKBS%2C12A0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 15:53:36 GMT
+recorded_at: Tue, 27 Mar 2018 20:26:12 GMT
