--- a/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
+++ b/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 16:15:21 GMT
+    - Tue, 27 Mar 2018 20:49:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DbTn81B%2CJkJGY85aYFAsy3; path=/
+    - PHPSESSID=Ud-PgUVymWyOaB4%2C4B2t11; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 16:15:21 GMT
+recorded_at: Tue, 27 Mar 2018 20:49:15 GMT
