--- a/www.nass.gov.ng/7bc17c23332e367e7a202277da0e249adb23d713.yml
+++ b/www.nass.gov.ng/7bc17c23332e367e7a202277da0e249adb23d713.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 16:15:43 GMT
+    - Tue, 27 Mar 2018 20:49:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=is493JJFibZO3FeZTrQ%2Cx3; path=/
+    - PHPSESSID=QFUBn7FqjVtmastk25VGP3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 16:15:43 GMT
+recorded_at: Tue, 27 Mar 2018 20:49:34 GMT
